--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +10,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    font-family: 'Roboto', sans-serif;
 }
 
 #main {
@@ -59,7 +62,7 @@ body {
 .box {
     padding: 10px;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 24px;
     padding: 10px 20px;
     color: #040D12;
     border-radius: 5px;
@@ -82,7 +85,7 @@ body {
     height: 50px;
     display: flex;
     align-items: center;
-    font-size: 20px;
+    font-size: 22px;
     justify-content: center;
     background-color: #87C4FF;
     color: #040D12; 
