--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: linear-gradient(to top, #fae8e2 0%, #f9e9f9 100%);
+    background: linear-gradient(90deg, rgb(246, 188, 226) 0%, hsla(203, 69%, 84%, 1) 100%);
 
 }
 
